[package]
name = "tracing-newrelic"
version = "0.0.2"
authors = ["PoiScript <poiscript@gmail.com>"]
description = "New Relic integration for tracing"
edition = "2018"
homepage = "https://github.com/PoiScript/tracing-newrelic"
repository = "https://github.com/PoiScript/tracing-newrelic"
keywords = ["tracing", "newrelic", "metrics", "logging"]
license = "MIT"
readme = "README.md"

[dependencies]
tracing-core = "0.1"
tracing-subscriber = { version = "0.2", default-features = false, features = [
    "registry"
] }
uuid = { version = "0.8", features = ["v4"] }

[dependencies.newrelic]
package = "newrelic-telemetry"
git = "https://github.com/PoiScript/newrelic-telemetry-sdk-rust"
rev = "f103d56898f599bf0d06e69d3ecc75147aa15d5e"
features = ["blocking"]

[dev-dependencies]
env_logger = "0.8.2"
pretty_assertions = "0.6.1"
tracing = "0.1.22"

[features]
# for integration testing only
__mocking = []

[[test]]
name = "foobar"
required-features = ["__mocking"]
