[package]
name = "tracing-newrelic"
version = "0.0.2"
authors = ["PoiScript <poiscript@gmail.com>"]
description = "New Relic integration for tracing"
edition = "2018"
homepage = "https://github.com/PoiScript/tracing-newrelic"
repository = "https://github.com/PoiScript/tracing-newrelic"
keywords = ["tracing", "newrelic", "metrics", "logging"]
license = "MIT"
readme = "README.md"

[dependencies]
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std"
] }
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
reqwest = "0.11"
tokio = "1.16"
futures = "0.3"

[dev-dependencies]
env_logger = "0.9"
pretty_assertions = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "registry",
    "fmt"
] }

[features]
# for integration testing only
__testing = []
