[package]
name = "tracing-newrelic"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
description = "New Relic integration for tracing"
edition = "2018"
homepage = "https://github.com/PoiScript/tracing-newrelic"
repository = "https://github.com/PoiScript/tracing-newrelic"
keywords = ["tracing", "newrelic", "metrics", "logging"]
license = "MIT"
readme = "README.md"

[dependencies]
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std"
] }
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
reqwest = { version = "0.11", default-features = false }
tokio = "1.16"
log = "0.4"
futures-util = "0.3"

[dev-dependencies]
env_logger = "0.9"
pretty_assertions = "1.1"
tracing = "0.1"
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.3", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "registry",
    "fmt"
] }

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
# for integration testing only
__testing = []
